# ImtaizMartApi

./: .gitignore  compose.yml
InventoryService/app/: main.py
InventoryService/app/api/: deps.py
InventoryService/app/core/: config.py  security.py
InventoryService/app/db/: base.py  models.py  session.py
InventoryService/app/enums/: enums.py
InventoryService/app/schemas/: auth.py  inventory.py  stock.py
NotificationService/: Dockerfile.dev  pyproject.toml
NotificationService/app/: main.py
NotificationService/app/api/: deps.py
NotificationService/app/db/: __init__.py
NotificationService/app/kafka/: producer.py
NotificationService/app/proto/: user_pb2.py
OrderService/: .env  Dockerfile.dev  pyproject.toml
OrderService/app/: main.py
OrderService/app/api/: deps.py
OrderService/app/core/: config.py
OrderService/app/db/: __init__.py  base.py  models.py  session.py
OrderService/app/enums/: enums.py  status_enum.py
OrderService/app/kafka/: consumer.py  handlers.py
OrderService/app/proto/: inventory.proto  order.proto  order_pb2.py  payment.proto  payment_pb2.py
OrderService/app/schemas/: order.py
PaymentService/: Dockerfile.dev  pyproject.toml
PaymentService/app/: main.py
PaymentService/app/api/: deps.py
PaymentService/app/core/: config.py
PaymentService/app/db/: base.py  models.py
PaymentService/app/enums/: enums.py  status_enum.py
PaymentService/app/kafka/: handlers.py
ProductService/: .env  pyproject.toml
ProductService/app/: main.py
UserService/: .env  Dockerfile.dev  pyproject.toml
UserService/app/: main.py
(+52 files in other folders)
