[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Shahid Khan <57123934+Shahidkhan0786@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.19"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.1"
pydantic-settings = "^2.3.4"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiokafka = "^0.10.0"
protobuf = "^5.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
